[gd_scene load_steps=12 format=3 uid="uid://bjb2ehqmcaubu"]

[ext_resource type="PackedScene" uid="uid://cbkh2tq3o0xwf" path="res://entity/enemy/enemy.tscn" id="1_jlwm5"]
[ext_resource type="Script" uid="uid://cop6hsdcsifwm" path="res://entity/enemy/ball/enemy_ball.gd" id="2_r30k1"]
[ext_resource type="Texture2D" uid="uid://del401sqqpdrx" path="res://entity/enemy/ball/enemy_ball.png" id="3_3n7dq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6di6r"]
radius = 38.052597

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlwm5"]
size = Vector2(800, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6di6r"]
size = Vector2(84, 83)

[sub_resource type="Animation" id="Animation_vog5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -45)]
}

[sub_resource type="Animation" id="Animation_8815w"]
resource_name = "idle"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -45)]
}

[sub_resource type="Animation" id="Animation_vpdny"]
resource_name = "move"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}

[sub_resource type="Animation" id="Animation_yog0w"]
resource_name = "pre_attack"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -39)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxu4e"]
_data = {
&"RESET": SubResource("Animation_vog5p"),
&"idle": SubResource("Animation_8815w"),
&"move": SubResource("Animation_vpdny"),
&"pre_attack": SubResource("Animation_yog0w")
}

[node name="EnemyBall" instance=ExtResource("1_jlwm5")]
script = ExtResource("2_r30k1")
speed_x = 200.0

[node name="Sprite2D" type="Sprite2D" parent="Direction" index="0"]
position = Vector2(0, -45)
texture = ExtResource("3_3n7dq")
flip_h = true
hframes = 2
vframes = 3

[node name="HitBox" type="Area2D" parent="Direction" index="1"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitBox" index="0"]
position = Vector2(0, -42)
shape = SubResource("CircleShape2D_6di6r")

[node name="MarkerBoom" parent="Direction" index="2"]
position = Vector2(0, -42)

[node name="AreaDetective" type="Area2D" parent="Direction" index="3"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/AreaDetective" index="0"]
position = Vector2(400, -80)
shape = SubResource("RectangleShape2D_jlwm5")

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2(0, -41.5)
shape = SubResource("RectangleShape2D_6di6r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_cxu4e")
}
autoplay = "move"

[node name="TimerLookback" type="Timer" parent="." index="3"]
unique_name_in_owner = true
one_shot = true
autostart = true

[connection signal="body_entered" from="Direction/HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Direction/AreaDetective" to="." method="_on_area_detective_body_entered"]
